// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el ProducTitle Debe de mostrar el componenete con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug - Sin imagen
  </span>
</div>
`;

exports[`Pruebas en el ProducTitle Debe de mostrar el componenete correctamente con el título personalizado 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;
